# tinker-hs

./: README.markdown  brainfuck.hs
alpino-tools/model/: Makefile  alpino-tools.cabal  extract_scores.hs  filter_with_binary_scores.hs  parse_calc_scores.hs  stats.hs
approx-rand/: approx-rand-list.hs  approx-rand-test.cabal  approx-rand.hs
brainfuck/: LICENSE  README.markdown  brainfuck.cabal  brainfuck.hs
brainfuck/Language/: Brainfuck.hs
confusables/: confusables.hs
confusables/Data/Set/BKTree/: Strict.hs
fst/: fst-extra.cabal
fst/FST/: Operators.hs  OperatorsT.hs
randompick/: Makefile  randompick-nice.hs  randompick.hs
suffixarray/: NOTES  suffixarray.cabal
suffixarray/Data/: SuffixArray.hs
