Name:		fst-extra	
Version:	0.0.1
License:	BSD3
License-file:	LICENSE
Copyright:	Copyright 2010 Daniël de Kok
Author:		Daniël de Kok <me@danieldk.eu>
Maintainer:	Daniël de Kok <me@danieldk.eu>
Homepage:	http://github.com/danieldk/tinker-hs
Category:	Data
Synopsis:	Extra FST operators
Description:	Extra FST operators	
Cabal-Version:	>= 1.2
Build-Type:	Simple

Library
  Exposed-Modules:	FST.Operators, FST.OperatorsT
  Build-Depends:	base >= 4.0, fst >= 0.9
  Ghc-Options:		-O2
